ZH/PaaS/1.0/BaseGuide/faq/error_code.md
# 错误码

## 错误码总览

| 错误码 | 描述 |
| - | - |
| 4311001 | 查询部署信息失败 |
| 4311002 | 查询部署阶段信息失败 |
| 4311003 | 部署失败 |
| 4311004 | 部署失败，已有部署任务进行中，请刷新查看 |
| 4311005 | 应用尚未在该环境发布过 |
| 4311006 | 已开启部署权限控制，仅管理员可以操作 |
| 4311007 | 日志流管道不存在 |
| 4311008 | 中止部署失败 |
| 4312001 | 仓库绑定失败 |
| 4312002 | 无法获取源码信息 |
| 4312003 | 尚未绑定 OAUTH 授权信息 |
| 4312004 | 无法获取代码版本 |
| 4312005 | 无法切换源码仓库类型 |
| 4312006 | 无法创建 Svn tag |
| 4312007 | 未支持的源码类型 |
| 4312008 | 未支持的源码来源 |
| 4312009 | 源码包已存在 |
| 4312010 | 缺失版本信息 |
| 4313010 | 增强服务绑定失败 |
| 4313020 | 配置资源实例失败 |
| 4313021 | 获取集群信息失败 |
| 4313022 | 资源池为空 |
| 4313040 | 服务删除失败 |
| 4313050 | 共享增强服务失败 |
| 4313081 | CI相关资源删除失败 |
| 4313082 | 读取增强服务实例信息失败 |

### 4313021 获取集群信息失败

获取集群信息失败，排查步骤如下：

1. 在管理后台（{PaaS3.0开发者中心访问地址}/backend/admin42/platform/clusters/manage/）确认应用集群配置中证书或者 Token 信息填写是否正确

配置信息请参考：[如何配置初始化集群](../../../../1.0/Operation/PaaS3/docs/configure_initial_cluster.md)


注意：在页面修改后，必须重启 workloads 模块所有进程才能生效

2. 在 `paas-stack` helm release 中确认 `workloads-generate-initial-cluster-state` pod 是否有执行成功

如果执行失败了，可 helm update 再重复执行

3. 查看 `workloads-celery` 模块日志，如有 `403 Forbidden` 报错，则参考 [为什么 workloads 项目提示无权限获取到应用集群信息](../../../1.0/Operation/PaaS3/docs/deploy_faq.md) 文档处理即可

### 4313022 资源池为空

资源池为空，排查步骤如下：

1. 在管理后台（{PaaS3.0开发者中心访问地址}/backend/admin42/platform/pre-created-instances/manage）确认对应的增强服务方案的资源池是否有可用的服务实例。

2. 如资源池中无可用实例, 则添加对应的服务实例后即可。
