ZH/PaaS/1.7/BaseGuide/faq/error_code.md
# 错误码

## 错误码总览

| 错误码  | 描述                                     |
| ------- | ---------------------------------------- |
| 4311001 | 查询部署信息失败                         |
| 4311002 | 查询部署阶段信息失败                     |
| 4311003 | 部署失败                                 |
| 4311004 | 部署失败，已有部署任务进行中，请刷新查看 |
| 4311005 | 应用尚未在该环境发布过                   |
| 4311006 | 已开启部署权限控制，仅管理员可以操作     |
| 4311007 | 日志流管道不存在                         |
| 4311008 | 中止部署失败                             |
| 4312001 | 仓库绑定失败                             |
| 4312002 | 无法获取源码信息                         |
| 4312003 | 尚未绑定 OAUTH 授权信息                  |
| 4312004 | 无法获取代码版本                         |
| 4312005 | 无法切换源码仓库类型                     |
| 4312006 | 无法创建 Svn tag                         |
| 4312007 | 未支持的源码类型                         |
| 4312008 | 未支持的源码来源                         |
| 4312009 | 源码包已存在                             |
| 4312010 | 缺失版本信息                             |
| 4312011 | 对象存储服务异常                         |
| 4313001 | 绑定运行时失败                           |
| 4313010 | 增强服务绑定失败                         |
| 4313020 | 配置资源实例失败                         |
| 4313021 | 获取集群信息失败                         |
| 4313022 | 资源池为空                               |
| 4313040 | 服务删除失败                             |
| 4313050 | 共享增强服务失败                         |
| 4313081 | CI 相关资源删除失败                      |
| 4313082 | 读取增强服务实例信息失败                 |
| 4314001 | 没找到任何待创建的 S-mart 应用包         |
| 4314002 | 缺失应用描述文件                         |
| 4314003 | 分析应用描述文件异常                     |
| 4314004 | 访问容器镜像仓库异常                     |

### 4313021 获取集群信息失败

获取集群信息失败，排查步骤如下：

1. 在管理后台（{PaaS3.0 开发者中心访问地址}/backend/admin42/platform/clusters/manage/）确认应用集群配置中证书或者 Token 信息填写是否正确。

平台对 K8S 集群进行管理，包括不限于：创建或删除命名空间、创建或删除蓝鲸应用( `Deployment` / `Service` / `Ingress` 等)。

所以需要配置对应集群的相关信息，包括：

- apiserver 访问地址，访问身份和 `cluster-admin` 权限
- 应用集群访问方式以及入口域名

注意：在页面修改后，必须重启 apiserver 模块所有进程才能生效。

2. 在 `bkpaas3` helm release 中确认 `bkpaas3-apiserver-generate-initial-cluster-state` job 是否有执行成功

如果执行失败了，可 helm update 再重复执行

3. 查看 `bkpaas3-apiserver-worker` 模块日志，如有 `403 Forbidden` 报错，则参考检查第一步中的证书 或者 Token 是否配置正确。

### 4313022 资源池为空

资源池为空，排查步骤如下：

1. 在管理后台（{PaaS3.0 开发者中心访问地址}/backend/admin42/platform/pre-created-instances/manage）确认对应的增强服务方案的资源池是否有可用的服务实例。

2. 如资源池中无可用实例, 则添加对应的服务实例后即可。
